chore: configure task routing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: celery1
     build:
       context: ./djcelery
-    command: celery --app=djcelery worker -l INFO
+    command: celery --app=djcelery worker -l INFO -Q queue1
     volumes:
       - ./djcelery:/usr/src/app/
     environment:
@@ -42,7 +42,7 @@ services:
     build:
       context: ./celeryworker
       dockerfile: Dockerfile
-    command: celery -A celerytask worker -l INFO
+    command: celery -A celerytask worker -l INFO -Q queue2
     volumes:
       - ./celeryworker:/usr/src/app/
     depends_on:
