--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: celery1
     build:
       context: ./djcelery
-    command: celery --app=djcelery worker -l INFO -Q queue1
+    command: celery --app=djcelery worker -l INFO -Q celery,celery:1,celery:2,celery:3
     volumes:
       - ./djcelery:/usr/src/app/
     environment:
@@ -37,14 +37,14 @@ services:
       - redis
       - django
 
-  celery2:
-    container_name: celery2
-    build:
-      context: ./celeryworker
-      dockerfile: Dockerfile
-    command: celery -A celerytask worker -l INFO -Q queue2
-    volumes:
-      - ./celeryworker:/usr/src/app/
-    depends_on:
-      - redis
-      - django
+  # celery2:
+  #   container_name: celery2
+  #   build:
+  #     context: ./celeryworker
+  #     dockerfile: Dockerfile
+  #   command: celery -A celerytask worker -l INFO -Q queue2
+  #   volumes:
+  #     - ./celeryworker:/usr/src/app/
+  #   depends_on:
+  #     - redis
+  #     - django
