--- a/djcelery/requirements.txt
+++ b/djcelery/requirements.txt
@@ -7,8 +7,10 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+colorama==0.4.6
 Django==4.2.2
 kombu==5.3.1
+pika==1.3.2
 prompt-toolkit==3.0.38
 python-dateutil==2.8.2
 redis==4.5.5
